Work with flex to fix view on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,8 @@ a {
         border-radius: 6px;
         padding: 8px 10px;
         background-color: rgb(248, 227, 200);
+        flex: 1 1 content;
+        align-self: center;
     }
 
 #second {
